# polymorphic-raster-pipeline

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/: buffer.h  fileio.h  main.cc  math3d.h  mesh.h  rasterizer.h
tests/: common.h  prp.test.cc
